--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,68 @@
     </header>
     <main>
         <ul>
-            <button type="button">Все</button>
-            <button type="button">Веб-сайты</button>
-            <button type="button">Приложения</button>
-            <button type="button">Дизайн</button>
-            <button type="button">Маркетинг</button>
+
+            <li><button type="button">Все</button></li>
+            <li><button type="button">Веб-сайты</button></li>
+            <li><button type="button">Приложения</button></li>
+            <li><button type="button">Дизайн</button></li>
+            <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
+            <li>
+                <a href="#"><img src="images/tehnokrak.jpg" alt="tehnokrak">   
+                <h2>Технокряк</h2> 
+                <p>Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a href="#"><img src="images/poster.jpg" alt="poster">    
+                <h2>Постер New Orlean vs Golden Star</h2> 
+                <p>Дизайн</p>
+                </a>
+            </li>
+            <li>
+                <a href="#"><img src="images/seafood.jpg" alt="seafood">    
+                <h2>Ресторан Seafood</h2> 
+                <p>Приложение</p>
+                </a>
+            </li>
+            <li>
+                <a href="#"><img src="images/prime.jpg" alt="prime">    
+                <h2>Проект Prime</h2> 
+                <p>Маркетинг</p>
+                </a>
+            </li>
+            <li>
+                <a href="#"><img src="images/boxes.jpg" alt="boxes">  
+                <h2>Проект Boxes</h2> 
+                <p>Приложение</p>
+                </a>
+            </li>
+            <li>
+                <a href="#"><img src="images/borders.jpg" alt="borders">    
+                <h2>Inspiration has no Borders</h2> 
+                <p>Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a href="#"><img src="images/limited-edition.jpg" alt="limited-edition">    
+                <h2>Издание Limited Edition</h2> 
+                <p>Дизайн</p>
+                </a>   
+            </li>
+            <li>
+                <a href="#"><img src="images/lab.jpg" alt="lab">   
+                <h2>Проект LAB</h2> 
+                <p>Маркетинг</p>
+                </a>
+            </li>
+            <li>
+                <a href="#"><img src="images/business.jpg" alt="business">   
+                <h2>Growing Business</h2> 
+                <p>Приложение</p>
+                </a>
+            </li>
         </ul>
     </main>
     <footer>
@@ -41,6 +98,7 @@
     </address>
     </footer>
 </body>
+</html>
             
         
 
