--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework-1</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    p{
+    .color:#fff;}
     <header>
         <nav>
             <a href="/"><span>Web</span><span>Studio</span></a>
