--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework-1</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    p{
-    .color:#fff;}
     <header>
         <nav>
             <a href="/"><span>Web</span><span>Studio</span></a>
@@ -26,8 +26,8 @@
     </header>
     <main>
         <section>
-            <h1>Эффективные решения<br> для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <h1 class="hero-text">Эффективные решения<br> для вашего бизнеса</h1>
+            <button class="hero-button" type="button">Заказать услугу</button>
         </section>
         <section>
             <ul>
