--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework-1</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
         <nav>
             <a href="/"><span>Web</span><span>Studio</span></a>
             <ul>
-                <li><a href="">Студия</a></li>
+                <li><a href="index.html">Студия</a></li>
                 <li><a href="portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
@@ -22,70 +25,73 @@
         </ul>
     </header>
     <main>
-        <ul>
-
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
-        </ul>
-        <ul>
-            <li>
-                <a href="#"><img src="images/tehnokrak.jpg" alt="tehnokrak">   
-                <h2>Технокряк</h2> 
-                <p>Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href="#"><img src="images/poster.jpg" alt="poster">    
-                <h2>Постер New Orlean vs Golden Star</h2> 
-                <p>Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href="#"><img src="images/seafood.jpg" alt="seafood">    
-                <h2>Ресторан Seafood</h2> 
-                <p>Приложение</p>
-                </a>
-            </li>
-            <li>
-                <a href="#"><img src="images/prime.jpg" alt="prime">    
-                <h2>Проект Prime</h2> 
-                <p>Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="#"><img src="images/boxes.jpg" alt="boxes">  
-                <h2>Проект Boxes</h2> 
-                <p>Приложение</p>
-                </a>
-            </li>
-            <li>
-                <a href="#"><img src="images/borders.jpg" alt="borders">    
-                <h2>Inspiration has no Borders</h2> 
-                <p>Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href="#"><img src="images/limited-edition.jpg" alt="limited-edition">    
-                <h2>Издание Limited Edition</h2> 
-                <p>Дизайн</p>
-                </a>   
-            </li>
-            <li>
-                <a href="#"><img src="images/lab.jpg" alt="lab">   
-                <h2>Проект LAB</h2> 
-                <p>Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="#"><img src="images/business.jpg" alt="business">   
-                <h2>Growing Business</h2> 
-                <p>Приложение</p>
-                </a>
-            </li>
-        </ul>
+        <section>
+            <ul>
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <a href="#"><img src="images/tehnokrak.jpg" alt="tehnokrak" width=100> 
+                    <h2>Технокряк</h2> 
+                    <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/poster.jpg" alt="poster" width=100>    
+                    <h2>Постер New Orlean vs Golden Star</h2> 
+                    <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/seafood.jpg" alt="seafood" width=100>    
+                    <h2>Ресторан Seafood</h2> 
+                    <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/prime.jpg" alt="prime" width=100>    
+                    <h2>Проект Prime</h2> 
+                    <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/boxes.jpg" alt="boxes" width=100>  
+                    <h2>Проект Boxes</h2> 
+                    <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/borders.jpg" alt="borders" width=100>    
+                    <h2>Inspiration has no Borders</h2> 
+                    <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/limited-edition.jpg" alt="limited-edition" width=100>    
+                    <h2>Издание Limited Edition</h2> 
+                    <p>Дизайн</p>
+                    </a>   
+                </li>
+                <li>
+                    <a href="#"><img src="images/lab.jpg" alt="lab" width=100>   
+                    <h2>Проект LAB</h2> 
+                    <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/business.jpg" alt="business" width=100>   
+                    <h2>Growing Business</h2> 
+                    <p>Приложение</p>
+                    </a>
+                </li>
+            </ul>
+        </section>    
     </main>
     <footer>
         <a href="/"><span>Web</span><span>Studio</span></a>
