--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <a href="/"><span>Web</span><span>Studio</span></a>
+            <a href="index.html"><span>Web</span>Studio</a>
             <ul>
                 <li><a href="index.html">Студия</a></li>
                 <li><a href="portfolio.html">Портфолио</a></li>
@@ -94,12 +94,12 @@
         </section>    
     </main>
     <footer>
-        <a href="/"><span>Web</span><span>Studio</span></a>
+        <a href="index.html"><span>Web</span>Studio</a>
         <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
-            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="380991111111">+38 099 111 11 11</a></li>
+            <li><a class="info" href="info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="info" href="380991111111">+38 099 111 11 11</a></li>
         </ul>
     </address>
     </footer>
