--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
     <header>
         <nav>
-            <a href="/"><span>Web</span><span>Studio</span></a>
+            <a href="index.html"><span class="logo">Web</span>Studio</a>
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a class="menu-element" href="index.html">Студия</a></li>
+                <li><a class="menu-element" href="portfolio.html">Портфолио</a></li>
+                <li><a class="menu-element" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="380961111111">+38 096 111 11 11</a></li>
+            <li><a class="header-contact" href="info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="header-contact" href="380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -30,27 +30,27 @@
             <button class="hero-button" type="button">Заказать услугу</button>
         </section>
         <section>
-            <ul>
+            <ul >
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="title-first">Внимание к деталям</h3>
+                    <p class="text-first">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="title-first">Пунктуальность</h3>
+                    <p class="text-first">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="title-first">Планирование</h3>
+                    <p class="text-first">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="title-first">Современные технологии</h3>
+                    <p class="text-first">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="second-title">Чем мы занимаемся</h2>
             <ul>
                 <li><img src="images/codding.jpg" alt="codding" width=100></li>
                 <li><img src="images/adaptate.jpg" alt="codding" width=100></li>
@@ -58,38 +58,38 @@
             </ul>       
         </section>
         <section>
-            <h2>Наша команда</h2>
+            <h2 class="title-three">Наша команда</h2>
             <ul>
                 <li>
                     <img src="images/igor.jpg" alt="Igor" width=100>
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="title-name">Игорь Демьяненко</h3>
+                    <p class="name-info">Product Designer</p>
                 </li>
                 <li>
                     <img src="images/olga.jpg" alt="Olga" width=100>
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="title-name">Ольга Репина</h3>
+                    <p class="name-info">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="images/nikolai.jpg" alt="Nikolai" width=100>
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="title-name">Николай Тарасов</h3>
+                    <p class="name-info">Marketing</p>
                 </li>
                 <li>
                     <img src="images/mihail.jpg" alt="Mihail" width=100>
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="title-name">Михаил Ермаков</h3>
+                    <p class="name-info">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="/"><span>Web</span><span>Studio</span></a>
+    <footer class="footer">
+        <a href="index.html"><span>Web</span>Studio</a>
             <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
-                <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="380991111111">+38 099 111 11 11</a></li>
+                <li><a class="info" href="info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="info" href="380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
