--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><span class="logo">Web</span>Studio</a>
+            <a href="index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
             <ul>
-                <li><a class="menu-element" href="index.html">Студия</a></li>
+                <li><a class="menu-element menu-element-active" href="index.html">Студия</a></li>
                 <li><a class="menu-element" href="portfolio.html">Портфолио</a></li>
                 <li><a class="menu-element" href="">Контакты</a></li>
             </ul>
@@ -25,7 +25,7 @@
         </ul>
     </header>
     <main>
-        <section>
+        <section class="hero">
             <h1 class="hero-text">Эффективные решения<br> для вашего бизнеса</h1>
             <button class="hero-button" type="button">Заказать услугу</button>
         </section>
@@ -84,7 +84,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="index.html"><span>Web</span>Studio</a>
+        <a href="index.html"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
             <address>
             <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
