--- a/portfolio.html
+++ b/portfolio.html
@@ -12,89 +12,89 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><span>Web</span>Studio</a>
+            <a href="index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
             <ul>
-                <li><a href="index.html">Студия</a></li>
-                <li><a href="portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a class="menu-element" href="index.html">Студия</a></li>
+                <li><a class="menu-element menu-element-active" href="portfolio.html">Портфолио</a></li>
+                <li><a class="menu-element" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="380961111111">+38 096 111 11 11</a></li>
+            <li><a class="header-contact" href="info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="header-contact" href="380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <section>
             <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button class="portfolio-menu-item" type="button">Все</button></li>
+                <li><button class="portfolio-menu-item" type="button">Веб-сайты</button></li>
+                <li><button class="portfolio-menu-item" type="button">Приложения</button></li>
+                <li><button class="portfolio-menu-item" type="button">Дизайн</button></li>
+                <li><button class="portfolio-menu-item" type="button">Маркетинг</button></li>
             </ul>
         </section>
         <section>
             <ul>
                 <li>
                     <a href="#"><img src="images/tehnokrak.jpg" alt="tehnokrak" width=100> 
-                    <h2>Технокряк</h2> 
-                    <p>Веб-сайт</p>
+                    <h2 class="portfolio-title">Технокряк</h2> 
+                    <p class="portfolio-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="#"><img src="images/poster.jpg" alt="poster" width=100>    
-                    <h2>Постер New Orlean vs Golden Star</h2> 
-                    <p>Дизайн</p>
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2> 
+                    <p class="portfolio-text">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="#"><img src="images/seafood.jpg" alt="seafood" width=100>    
-                    <h2>Ресторан Seafood</h2> 
-                    <p>Приложение</p>
+                    <h2 class="portfolio-title">Ресторан Seafood</h2> 
+                    <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="#"><img src="images/prime.jpg" alt="prime" width=100>    
-                    <h2>Проект Prime</h2> 
-                    <p>Маркетинг</p>
+                    <h2 class="portfolio-title">Проект Prime</h2> 
+                    <p class="portfolio-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="#"><img src="images/boxes.jpg" alt="boxes" width=100>  
-                    <h2>Проект Boxes</h2> 
-                    <p>Приложение</p>
+                    <h2 class="portfolio-title">Проект Boxes</h2> 
+                    <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="#"><img src="images/borders.jpg" alt="borders" width=100>    
-                    <h2>Inspiration has no Borders</h2> 
-                    <p>Веб-сайт</p>
+                    <h2 class="portfolio-title">Inspiration has no Borders</h2> 
+                    <p class="portfolio-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="#"><img src="images/limited-edition.jpg" alt="limited-edition" width=100>    
-                    <h2>Издание Limited Edition</h2> 
-                    <p>Дизайн</p>
+                    <h2 class="portfolio-title">Издание Limited Edition</h2> 
+                    <p class="portfolio-text">Дизайн</p>
                     </a>   
                 </li>
                 <li>
                     <a href="#"><img src="images/lab.jpg" alt="lab" width=100>   
-                    <h2>Проект LAB</h2> 
-                    <p>Маркетинг</p>
+                    <h2 class="portfolio-title">Проект LAB</h2> 
+                    <p class="portfolio-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="#"><img src="images/business.jpg" alt="business" width=100>   
-                    <h2>Growing Business</h2> 
-                    <p>Приложение</p>
+                    <h2 class="portfolio-title">Growing Business</h2> 
+                    <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
             </ul>
         </section>    
     </main>
-    <footer>
-        <a href="index.html"><span>Web</span>Studio</a>
+    <footer class="footer">
+        <a href="index.html"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <address>
         <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
