--- a/index.html
+++ b/index.html
@@ -26,25 +26,26 @@
     </header>
     <main>
         <section class="hero">
-            <h1 class="hero-text">Эффективные решения<br> для вашего бизнеса</h1>
+            <h1 class="hero-text">ЭФФEКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button class="hero-button" type="button">Заказать услугу</button>
         </section>
         <section>
+            <h2 class="shadow-title">Примеры работ</h2>
             <ul >
                 <li>
-                    <h3 class="title-first">Внимание к деталям</h3>
+                    <h3 class="title-first">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p class="text-first">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="title-first">Пунктуальность</h3>
+                    <h3 class="title-first">ПУНКТУАЛЬНОСТЬ</h3>
                     <p class="text-first">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="title-first">Планирование</h3>
+                    <h3 class="title-first">ПЛАНИРОВАНИЕ</h3>
                     <p class="text-first">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3 class="title-first">Современные технологии</h3>
+                    <h3 class="title-first">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="text-first">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -52,31 +53,31 @@
         <section>
             <h2 class="second-title">Чем мы занимаемся</h2>
             <ul>
-                <li><img src="images/codding.jpg" alt="codding" width=100></li>
-                <li><img src="images/adaptate.jpg" alt="codding" width=100></li>
-                <li><img src="images/disign.jpg" alt="design" width=100></li>
+                <li><img src="images/codding.jpg" alt="codding" width=370></li>
+                <li><img src="images/adaptate.jpg" alt="codding" width=370></li>
+                <li><img src="images/disign.jpg" alt="design" width=370></li>
             </ul>       
         </section>
         <section>
             <h2 class="title-three">Наша команда</h2>
             <ul>
                 <li>
-                    <img src="images/igor.jpg" alt="Igor" width=100>
+                    <img src="images/igor.jpg" alt="Igor" width=270>
                     <h3 class="title-name">Игорь Демьяненко</h3>
                     <p class="name-info">Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/olga.jpg" alt="Olga" width=100>
+                    <img src="images/olga.jpg" alt="Olga" width=270>
                     <h3 class="title-name">Ольга Репина</h3>
                     <p class="name-info">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/nikolai.jpg" alt="Nikolai" width=100>
+                    <img src="images/nikolai.jpg" alt="Nikolai" width=270>
                     <h3 class="title-name">Николай Тарасов</h3>
                     <p class="name-info">Marketing</p>
                 </li>
                 <li>
-                    <img src="images/mihail.jpg" alt="Mihail" width=100>
+                    <img src="images/mihail.jpg" alt="Mihail" width=270>
                     <h3 class="title-name">Михаил Ермаков</h3>
                     <p class="name-info">UI Designer</p>
                 </li>
