--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
     <main>
         <section>
             <ul>
-                <li><button class="portfolio-menu-item" type="button">Все</button></li>
+                <li><button class="portfolio-menu-item active" type="button">Все</button></li>
                 <li><button class="portfolio-menu-item" type="button">Веб-сайты</button></li>
                 <li><button class="portfolio-menu-item" type="button">Приложения</button></li>
                 <li><button class="portfolio-menu-item" type="button">Дизайн</button></li>
@@ -35,57 +35,58 @@
             </ul>
         </section>
         <section>
+            <h1 class="shadow-title">Элементы портфолио</h1>
             <ul>
                 <li>
-                    <a href="#"><img src="images/tehnokrak.jpg" alt="tehnokrak" width=100> 
+                    <a href="#"><img src="images/tehnokrak.jpg" alt="tehnokrak" width=370> 
                     <h2 class="portfolio-title">Технокряк</h2> 
                     <p class="portfolio-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/poster.jpg" alt="poster" width=100>    
+                    <a href="#"><img src="images/poster.jpg" alt="poster" width=370>    
                     <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2> 
                     <p class="portfolio-text">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/seafood.jpg" alt="seafood" width=100>    
+                    <a href="#"><img src="images/seafood.jpg" alt="seafood" width=370>    
                     <h2 class="portfolio-title">Ресторан Seafood</h2> 
                     <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/prime.jpg" alt="prime" width=100>    
+                    <a href="#"><img src="images/prime.jpg" alt="prime" width=370>    
                     <h2 class="portfolio-title">Проект Prime</h2> 
                     <p class="portfolio-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/boxes.jpg" alt="boxes" width=100>  
+                    <a href="#"><img src="images/boxes.jpg" alt="boxes" width=370>  
                     <h2 class="portfolio-title">Проект Boxes</h2> 
                     <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/borders.jpg" alt="borders" width=100>    
+                    <a href="#"><img src="images/borders.jpg" alt="borders" width=370>    
                     <h2 class="portfolio-title">Inspiration has no Borders</h2> 
                     <p class="portfolio-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/limited-edition.jpg" alt="limited-edition" width=100>    
+                    <a href="#"><img src="images/limited-edition.jpg" alt="limited-edition" width=370>    
                     <h2 class="portfolio-title">Издание Limited Edition</h2> 
                     <p class="portfolio-text">Дизайн</p>
                     </a>   
                 </li>
                 <li>
-                    <a href="#"><img src="images/lab.jpg" alt="lab" width=100>   
+                    <a href="#"><img src="images/lab.jpg" alt="lab" width=370>   
                     <h2 class="portfolio-title">Проект LAB</h2> 
                     <p class="portfolio-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/business.jpg" alt="business" width=100>   
+                    <a href="#"><img src="images/business.jpg" alt="business" width=370>   
                     <h2 class="portfolio-title">Growing Business</h2> 
                     <p class="portfolio-text">Приложение</p>
                     </a>
